--- a/estilo.css
+++ b/estilo.css
@@ -9,3 +9,10 @@ h1{
 body{
     background-color: rgb(188, 186, 190);
 }
+footer p{
+    text-align: center;
+    color: blueviolet;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 15px;
+}
